# mit-6.684-labs

./: Cargo.toml  README.md
generate-case/: Cargo.toml
generate-case/data/: .gitignore  oxford_5000.txt  oxford_academic_1.txt  oxford_academic_2.txt  oxford_academic_3.txt  words_levels.txt
generate-case/src/: main.rs
map-reduce/: .env-template  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
map-reduce/src/: errors.rs  main.rs  screen.rs  server.rs
map-reduce/src/api/: endpoints.rs  kind.rs  mod.rs  network_neighbor.rs  system.rs  whois.rs
map-reduce/src/services/: kind.rs  master_service.rs  mod.rs  worker_service.rs
map-reduce/src/tasks/: mod.rs  pipeline.rs  task_assignment.rs
map-reduce/src/threads/: heartbeat.rs  inner.rs  mod.rs  server.rs
map-reduce/src/workers/: client.rs  heartbeat.rs  init.rs  inner.rs  mod.rs  server.rs
map_reduce/: Cargo.toml
mit-6-824-map-reduce/: Cargo.toml
playground/: Cargo.toml
playground/src/: main.rs
