[package]
name = "map-reduce"
version = "0.1.0"
authors = ["Ertugrul Karademir <ekarademir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
env_logger = "0.7.1"
futures = "0.3.5"
hyper = "0.13.8"
log = { version = "0.4.11", features = ["release_max_level_info"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["full"] }
