[package]
name = "map-reduce"
version = "0.1.0"
authors = ["Ertugrul Karademir <ekarademir@gmail.com>"]
edition = "2018"

[[bin]]
name = "map-reduce"
path = "src/main.rs"

[features]
# If used, all tests except the test without this flag will be ignored
# A good way to use testing for development
dont_test_this = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
env_logger = "0.7.1"
futures = "0.3.5"
hyper = "0.13.8"
log = { version = "0.4.11", features = ["release_max_level_debug"] }
petgraph = "0.5.1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["full"] }

[dev-dependencies]
httptest = "0.13.2"
